Closed
Bug 1539118
Opened 6 years ago
Closed 6 years ago
Crash in mozilla::gfx::DrawTargetD2D1::CreateBrushForPattern when using Canvas
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
People
(Reporter: bas.schouten, Assigned: bas.schouten)
Details
Attachments
(1 file)
|
3.20 KB,
patch
|
pascalc
:
approval-mozilla-release+
|
Details | Diff | Splinter Review |
There's one more crash left in Canvas with CreateBrushForPattern. This bug is specifically for the beta uplift of one of the patches that has already landed on central in bug 1524554.
| Assignee | ||
Comment 1•6 years ago
|
||
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1519760
- User impact if declined: Crashes
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just a validity check adding an early return.
- String changes made/needed: None
Attachment #9053565 -
Flags: approval-mozilla-release?
Updated•6 years ago
|
status-firefox66:
--- → affected
tracking-firefox66:
--- → +
Comment 2•6 years ago
|
||
Comment on attachment 9053565 [details] [diff] [review]
D22964.diff
Last crash fix for mozilla::gfx::DrawTargetD2D1::CreateBrushForPattern landed just before the merge to 67. Proced effective on Beta, approved for uplift to our next 66 dot release. Thanks
Attachment #9053565 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Comment 3•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•