Bug 1539118 - "Crash in mozilla::gfx::DrawTargetD2D1::CreateBrushForPattern when using Canvas" a=pascalc